--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "figma-tokens-flattener",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "A tool for transforming Ant Design tokens from Tokens Studio for Figma (Single file) into flat style mappings for light and dark themes.",
   "main": "index.js",
     "bin": {
     "figma-tokens-flattener": "index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jurassic-period/figma-tokens-flattener.git"
+  },
+  "homepage": "https://github.com/jurassic-period/figma-tokens-flattener#readme",
+  "bugs": {
+    "url": "https://github.com/jurassic-period/figma-tokens-flattener/issues"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
